Creando sitio web, para consumo de api, sentando las bases de lo que sera el comportamiendo del resto de los modelos

--- a/TestAPI/TestAPI.csproj
+++ b/TestAPI/TestAPI.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Entities\Client.cs~RF2acc6ac.TMP" />
-    <None Remove="Entities\Product.cs~RF2a2bfc7.TMP" />
+    <None Remove="4. Data\Entities\Client.cs~RF2acc6ac.TMP" />
+    <None Remove="4. Data\Entities\Product.cs~RF2a2bfc7.TMP" />
   </ItemGroup>
 
   <ItemGroup>
