--- a/TestWeb/package.json
+++ b/TestWeb/package.json
@@ -34,6 +34,7 @@
     "jquery-validation": "^1.19.3",
     "jquery-validation-unobtrusive": "^3.2.12",
     "jquery.easing": "^1.4.1",
+    "jquery-maskmoney": "^3.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
